mesh/detailes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: detailes-envoy-service
  annotations:
    prometheus.io/scrape: "true"        # Enable scraping
    prometheus.io/path: "/stats/prometheus" # Path for metrics
    prometheus.io/port: "8081"
spec:
  selector:
    app: envoy-proxy-detailes
  ports:
    - protocol: TCP
      port: 4040             
      targetPort: 4040
      name: http    
    - protocol: TCP
      port: 8081           
      targetPort: 8081      
      name: admin
  type: NodePort
