mesh/envoy_hot_reload.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            weighted_clusters:
                              clusters:
                                - name: pinger-v1-envoy-service
                                  weight: 5
                                - name: pinger-v2-envoy-service
                                  weight: 95
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
  clusters:
    - name: pinger-v1-envoy-service
      connect_timeout: "1s"
      type: STRICT_DNS
      load_assignment:
        cluster_name: pinger-v1-envoy-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "pinger-v1-envoy-service.envoy-demo.svc.cluster.local"
                      port_value: 3030
    - name: pinger-v2-envoy-service
      connect_timeout: "1s"
      type: STRICT_DNS
      load_assignment:
        cluster_name: pinger-v2-envoy-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "pinger-v2-envoy-service.envoy-demo.svc.cluster.local"
                      port_value: 3030

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081  # Corrected port value for the admin interface
