mesh/frontend-envoy-config.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: envoy-proxy-frontend-config
#   labels:
#     app: envoy-proxy-frontend
# data:
#   envoy.yaml: |-
#     static_resources:
#       listeners:
#         - name: listener_0
#           address:
#             socket_address:
#               address: 0.0.0.0
#               port_value: 8000
#           filter_chains:
#             - filters:
#                 - name: envoy.filters.network.http_connection_manager
#                   typed_config:
#                     "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#                     stat_prefix: ingress_http
#                     route_config:
#                       name: local_route
#                       virtual_hosts:
#                         - name: backend
#                           domains: ["*"]
#                           routes:
#                             - match:
#                                 prefix: "/"
#                               route:
#                                 cluster: frontend-envoy-service
#                     http_filters:
#                       - name: envoy.filters.http.router
#       clusters:
#         - name: frontend-envoy-service
#           connect_timeout: 0.25s
#           type: strict_dns
#           lb_policy: round_robin
#           load_assignment:
#             cluster_name: frontend-envoy-service
#             endpoints:
#               - lb_endpoints:
#                   - endpoint:
#                       address:
#                         socket_address:
#                           address: frontend-envoy-service
#                           port_value: 9000  # Points to the main app container
#     admin:
#       access_log_path: "/tmp/admin_access.log"
#       address:
#         socket_address:
#           address: 0.0.0.0
#           port_value: 8081
kind: ConfigMap
apiVersion: v1
metadata:
  name: envoy-proxy-frontend-config
  namespace: default
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: "0.0.0.0"
              port_value: 8000
          filter_chains:
            - filters:
                - name: "envoy.filters.network.http_connection_manager"
                  typed_config:
                    "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                    stat_prefix: "frontend_ingress_http"
                    route_config:
                      name: "local_route"
                      virtual_hosts:
                        - name: "frontend_service"
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"  # Match all requests
                              route:
                                cluster: "frontend_service"
                                timeout: "0s"
                    http_filters:
                      - name: "envoy.filters.http.router"
                        typed_config:
                          "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    access_log:
                      - name: "envoy.file_access_log"
                        typed_config:
                          "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                          path: "/dev/stdout"

      clusters:
        - name: "frontend_service"
          type: STRICT_DNS
          connect_timeout: "1s"  # Connection timeout
          load_assignment:
            cluster_name: "frontend_service"
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "localhost"
                          port_value: 9000

    admin:
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8081
# kind: ConfigMap
# apiVersion: v1
# metadata:
#   name: envoy-proxy-frontend-config
#   namespace: default
# data:
#   envoy.yaml: |
#     static_resources:
#       listeners:
#         - name: listener_0
#           address:
#             socket_address:
#               address: "0.0.0.0"
#               port_value: 8000
#           filter_chains:
#             - filters:
#                 - name: "envoy.filters.network.http_connection_manager"
#                   typed_config:
#                     "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
#                     stat_prefix: "frontend_ingress_http"
#                     route_config:
#                       name: "local_route"
#                       virtual_hosts:
#                         - name: "frontend_service"
#                           domains: ["*"]
#                           routes:
#                             - match:
#                                 prefix: "/"  # Match all incoming requests
#                               route:
#                                 weighted_clusters:
#                                   clusters:
#                                     - name: "pinger-v1"
#                                       weight: 95  # Start with 95% traffic to pinger-v1
#                                     - name: "pinger-v2"
#                                       weight: 5   # Start with 5% traffic to pinger-v2
#                                 timeout: "0s"
#                     http_filters:
#                       - name: "envoy.filters.http.router"
#                         typed_config:
#                           "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
#                     access_log:
#                       - name: "envoy.file_access_log"
#                         typed_config:
#                           "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
#                           path: "/dev/stdout"

#       clusters:
#         - name: "pinger-v1"
#           type: STRICT_DNS
#           connect_timeout: "1s"
#           load_assignment:
#             cluster_name: "pinger-v1"
#             endpoints:
#               - lb_endpoints:
#                   - endpoint:
#                       address:
#                         socket_address:
#                           address: "pinger-v1-envoy-service.default.svc.cluster.local"
#                           port_value: 3030  # Actual port for pinger-v1 service

#         - name: "pinger-v2"
#           type: STRICT_DNS
#           connect_timeout: "1s"
#           load_assignment:
#             cluster_name: "pinger-v2"
#             endpoints:
#               - lb_endpoints:
#                   - endpoint:
#                       address:
#                         socket_address:
#                           address: "pinger-v2-envoy-service.default.svc.cluster.local"
#                           port_value: 3030  # Actual port for pinger-v2 service

#         - name: "frontend_service"
#           type: STRICT_DNS
#           connect_timeout: "1s"
#           load_assignment:
#             cluster_name: "frontend_service"
#             endpoints:
#               - lb_endpoints:
#                   - endpoint:
#                       address:
#                         socket_address:
#                           address: "frontend-envoy-service.default.svc.cluster.local"
#                           port_value: 9000  # Actual port for frontend service

#     admin:
#       access_log_path: "/tmp/admin_access.log"
#       address:
#         socket_address:
#           address: "0.0.0.0"
#           port_value: 8081

#     stats_config:
#       use_all_default_tags: true
#     stats_flush_interval: "5s"
