mesh/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-envoy-service
  annotations:
    prometheus.io/scrape: "true"        # Enable scraping
    prometheus.io/path: "/stats/prometheus" # Path for metrics
    prometheus.io/port: "8081"
spec:
  selector:
    app: envoy-proxy-frontend
  ports:
    - protocol: TCP
      port: 8000             
      targetPort: 8000
      name: http
    - protocol: TCP
      port: 8081           
      targetPort: 8081      
      name: admin
  type: NodePort
