mesh/pinger-envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-proxy-pinger-v1-config
  labels:
    app: envoy-proxy-pinger-v1-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: "0.0.0.0"
              port_value: 3030
          filter_chains:
            - filters:
                - name: "envoy.filters.network.http_connection_manager"
                  typed_config:
                    "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                    stat_prefix: "pinger_ingress_http"
                    route_config:
                      name: "local_route"
                      virtual_hosts:
                        - name: "pinger_service"
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"  # Match all incoming requests
                              route:
                                weighted_clusters:
                                  clusters:
                                    - name: "pinger-v1"
                                      weight: 95  # Start with 95% traffic to pinger-v1
                                    - name: "pinger-v2"
                                      weight: 5   # Start with 5% traffic to pinger-v2
                                timeout: "0s"
                    http_filters:
                      - name: "envoy.filters.http.router"
                        typed_config:
                          "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    access_log:
                      - name: "envoy.file_access_log"
                        typed_config:
                          "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                          path: "/dev/stdout"

      clusters:
        - name: "pinger-v1"
          type: STRICT_DNS
          connect_timeout: "1s"
          load_assignment:
            cluster_name: "pinger-v1"
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "pinger-v1-envoy-service.default.svc.cluster.local"
                          port_value: 3030  # Actual port for pinger-v1 service

        - name: "pinger-v2"
          type: STRICT_DNS
          connect_timeout: "1s"
          load_assignment:
            cluster_name: "pinger-v2"
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "pinger-v2-envoy-service.default.svc.cluster.local"
                          port_value: 3030  # Actual port for pinger-v2 service
    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8081

    stats_config:
      use_all_default_tags: true
    stats_flush_interval: "5s"
