mesh/pinger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinger-v1-envoy-service
  annotations:
    prometheus.io/scrape: "true"        # Enable scraping
    prometheus.io/path: "/stats/prometheus" # Path for metrics
    prometheus.io/port: "8081"
spec:
  selector:
    app: envoy-proxy-pinger-v1
  ports:
    - protocol: TCP
      port: 3030            
      targetPort: 3030
      name: http    
    - protocol: TCP
      port: 8081           
      targetPort: 8081      
      name: admin
  type: NodePort
