mesh/pinger-v2-envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-proxy-pinger-v2-config
  labels:
    app: envoy-proxy-pinger-v2-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: "0.0.0.0"
              port_value: 3030
          filter_chains:
            - filters:
                - name: "envoy.filters.network.http_connection_manager"
                  typed_config:
                    "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                    stat_prefix: "pinger2_ingress_http"
                    route_config:
                      name: "local_route"
                      virtual_hosts:
                        - name: "pinger2_service"
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"  # Match all requests
                              route:
                                cluster: "pinger2_service"
                                timeout: "0s"
                    http_filters:
                      - name: "envoy.filters.http.router"
                        typed_config:
                          "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    access_log:
                      - name: "envoy.file_access_log"
                        typed_config:
                          "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                          path: "/dev/stdout"

      clusters:
        - name: "pinger2_service"
          type: STRICT_DNS
          connect_timeout: "1s"  # Connection timeout
          load_assignment:
            cluster_name: "pinger2_service"
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: "localhost"
                          port_value: 3000

    admin:
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8081
